<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <Button
        android:id="@+id/date_picker_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_picker" />

    <Button
        android:id="@+id/time_picker_button"
        android:layout_below="@id/date_picker_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_picker" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:layout_centerInParent="true" />

</RelativeLayout>
