...
        <item>Hindi</item>
        <item>English</item>
    </string-array>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="text_launch_dialog">launch dialog</string>
    <string name="text_ok">Ok</string>
    <string name="text_enter_name">Enter your name</string>
    <string name="text_next">Next</string>
    <string name="text_start">Start</string>
    <string name="text_next_fragment">Next fragment</string>
    <string name="text_next_activity">Next Activity</string>
    <string name="text_secondary_fragment">This is Secondary Fragment</string>
    <string name="text_mainactivity">MainActivity</string>
...
