...

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:id="@+id/english"
            android:text="English"
            android:onClick="onClick"
            android:textAllCaps="true"
            android:textColor="#D32F2F"
            android:textStyle="bold" />

        <Button
...
